--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": " http://giova445.github.io/avocadoDOM/",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
